created some request functions
